--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
     /* background-color: #f0f0f0; */
     padding: 1px;
     text-align: center;
-    color: #555;
+    color: #fff;
     font-size: 6px;
   }
   
